--- a/index.html
+++ b/index.html
@@ -209,6 +209,8 @@
 
 								<div class="item mb-2">
 									<div class="item-heading row align-items-center mb-2">
+										<h4 class="item-title">Travel Award</h4>
+									</div>
 										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
 											<strong>The Graduate College Travel Award</strong>, ASU Graduate College</div>
 										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
@@ -224,7 +226,7 @@
 										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
 											<strong>Individual Travel Grant</strong>, ASU Graduate and Professional Student Association</div>
 										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
-											2017, 2018, 2019, 2020, 2022</div>
+											2017, 18, 19, 20, 22</div>
 									</div>
 								</div><!--//item-->
 
@@ -232,38 +234,38 @@
 										<div class="item-heading row align-items-center mb-2">
 											<h4 class="item-title">Paper Presentation & Talks</h4>
 										</div>
-										<div class="item-content">
-											<p><strong>Ko, A.</strong>, Pick, C. M., Varnum, M. E. W., Becker, D. V., & Neuberg, S. L. (June, 2022).
+										<div class="item-content" style="padding-left: 35px; text-indent: -25px;">
+											<p>11. <strong>Ko, A.</strong>, Pick, C. M., Varnum, M. E. W., Becker, D. V., & Neuberg, S. L. (June, 2022).
 												Responses to partisans are calibrated by a COVID-sensitive behavioral immune system.
 												Paper presentation at the Human Behavior & Evolution Society Conference, Virtual</p>
-											<p>Kirsch, A., Kenrick, D. T., <strong>Ko, A.</strong>, Pick, C. M., & Varnum, M. E. W. (June, 2022)
+											<p>10. Kirsch, A., Kenrick, D. T., <strong>Ko, A.</strong>, Pick, C. M., & Varnum, M. E. W. (June, 2022)
 												Differences in aggression among kin and non-kin.
 												Paper presentation at the Human Behavior & Evolution Society Conference, Virtual.</p>
-											<p>Cohen, A. B., Moon, J. W., & <strong>Ko, A.</strong> (May, 2022).
+											<p>09. Cohen, A. B., Moon, J. W., & <strong>Ko, A.</strong> (May, 2022).
 												Individual differences and ecological influences interact to predict anti-atheist prejudice. P
 												aper presentation at APS Annual Conference, Chicago, Illinois. </p>
-											<p>Kirsch, A., Kenrick, D. T., <strong>Ko, A.</strong>, Pick, C. M., & Varnum, M. E. W. (April, 2022)
+											<p>08. Kirsch, A., Kenrick, D. T., <strong>Ko, A.</strong>, Pick, C. M., & Varnum, M. E. W. (April, 2022)
 												Differences in aggression among kin and non-kin.
 												Paper presentation at the Northeastern Evolutionary Psychology Society.</p>
-											<p><strong>Ko, A.</strong>, Pick, C. M., Varnum, M. E. W., Becker, D. V., & Neuberg, S. L. (February, 2022).
+											<p>07. <strong>Ko, A.</strong>, Pick, C. M., Varnum, M. E. W., Becker, D. V., & Neuberg, S. L. (February, 2022).
 												Threat-based antipathy toward Republicans is calibrated within individuals by a disease psychology sensitive to COVID cases.
 												Data presentation at the Society for Personality and Social Psychology conference, San Francisco, California.</p>
-											<p>Bock, J., <strong>Ko, A.</strong>, & Krems, J. A. (February, 2021).
+											<p>06. Bock, J., <strong>Ko, A.</strong>, & Krems, J. A. (February, 2021).
 												Explicit and implicit evaluations of mask-wearers during the COVID-19 pandemic.
 												Paper presentation at the Society for Personality and Social Psychology conference.</p>
-											<p><strong>Ko, A.</strong>, Pick, C. M., Kwon, J., Barlev, M., Krems, J. A., Varnum, M. E. W., & Kenrick, D. T. (February, 2020).
+											<p>05. <strong>Ko, A.</strong>, Pick, C. M., Kwon, J., Barlev, M., Krems, J. A., Varnum, M. E. W., & Kenrick, D. T. (February, 2020).
 												Family matters: Rethinking the psychology of human social motivation.
 												Paper presentation at the Society for Personality and Social Psychology conference, New Orleans, Louisiana.</p>
-											<p>Krems, J. A., <strong>Ko, A.</strong>, Moon, J. W., & Varnum, M. E. W. (October, 2019).
+											<p>04. Krems, J. A., <strong>Ko, A.</strong>, Moon, J. W., & Varnum, M. E. W. (October, 2019).
 												Sexually unrestricted women are perceived as having low self-esteem: First evidence for a pervasive persistent, robust (but unfounded) stereotype.
 												Paper presentation at the annual meeting of the Society for Experimental Social Psychology, Toronto, Canada. </p>
-											<p><strong>Ko, A.</strong>, Suh, E. M., Shin, J., & Neuberg, S. L. (May, 2019).
+											<p>03. <strong>Ko, A.</strong>, Suh, E. M., Shin, J., & Neuberg, S. L. (May, 2019).
 												Functionally calibrating life satisfaction: The case of mating motives and self-perceived mate value.
 												Paper presentation at the Human Behavior and Evolution Society, Boston, Massachusetts.</p>
-											<p><strong>Ko, A.</strong>, & Suh, E. M. (August, 2016).
+											<p>02. <strong>Ko, A.</strong>, & Suh, E. M. (August, 2016).
 												Self-perceived mate value and happiness.
 												Paper presentation at the International Society for Quality of Life Research conference, Seoul, South Korea.</p>
-											<p>Shin, J., Suh., E. M., Kim, J., & <strong>Ko, A.</strong> (May, 2015).
+											<p>01. Shin, J., Suh., E. M., Kim, J., & <strong>Ko, A.</strong> (May, 2015).
 												Romantic motives make the relative aspects of happiness salient.
 												Paper presentation at Korea Social and Personality Psychological Association conference, Seoul, South Korea.</p>
 										</div>
@@ -273,41 +275,41 @@
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title">Paper Presentation & Talks</h4>
 									</div>
-									<div class="item-content">
-										<p>Sabree, K., <strong>Ko, A.</strong>, Neuberg, S. N., & Kenrick, D. T. (April, 2021)
+									<div class="item-content" style="padding-left: 35px; text-indent: -25px;">
+										<p>12. <u>Sabree, K.</u>, <strong>Ko, A.</strong>, Neuberg, S. N., & Kenrick, D. T. (April, 2021)
 											Are you my father? Paternal uncertainty and genetic testing.
 											Poster presented at Arizona Psychology Undergraduate Research Conference (AZPURC), Virtual.</p>
-										<p><strong>Ko, A.</strong>, Becker, D.V., & Neuberg, S.L. (February, 2021).
+										<p>11. <strong>Ko, A.</strong>, Becker, D.V., & Neuberg, S.L. (February, 2021).
 											Is AAAB more diverse than ABBB? On judging diversity.
 											Poster presentation at the Society for Personality and Social Psychology conference.</p>
-										<p>Rheem, H., <strong>Ko, A.</strong>, & Becker, D. V. (November, 2019).
+										<p>10. Rheem, H., <strong>Ko, A.</strong>, & Becker, D. V. (November, 2019).
 											Conflict evoked by counter-stereotypical implicit associations is processed by the conflict monitoring mechanism like Stroop stimuli.
 											Poster presentation at the Psychonomic Society conference, Montréal, Québec, CA.</p>
-										<p>Defelipe, R. P., Crispim, A. C., Ferreira, J. H. B. P., Varella, M. A. C., Valentova, J. V., Varnum, M. E W., Pick, C. M., <strong>Ko, A.</strong>, & Kenrick, D. T. (September, 2019).
+										<p>09. Defelipe, R. P., Crispim, A. C., Ferreira, J. H. B. P., Varella, M. A. C., Valentova, J. V., Varnum, M. E W., Pick, C. M., <strong>Ko, A.</strong>, & Kenrick, D. T. (September, 2019).
 											Reproductive effort as the best predictor of life satisfaction: Evidence from a Brazilian sample.
 											Poster presented at the meeting of the International Society for Human Ethology, Zadar, Croatia.</p>
-										<p><strong>Ko, A.</strong>, Suh, E. M., & Neuberg, S. L. (January, 2019)
+										<p>08. <strong>Ko, A.</strong>, Suh, E. M., & Neuberg, S. L. (January, 2019)
 											Is life satisfaction calibrated by self-perceived mate value?
 											Poster presentation at the Society for Personality and Social Psychology conference, Portland, Oregon.</p>
-										<p><strong>Ko, A.</strong>, Suh, E.M., & Neuberg, S.L. (July, 2018)
+										<p>07. <strong>Ko, A.</strong>, Suh, E.M., & Neuberg, S.L. (July, 2018)
 											Is life satisfaction calibrated by self-perceived mate value?
 											Poster presentation at the Human Behavior and Evolution Society conference, Amsterdam, Netherlands.</p>
-										<p><strong>Ko, A.</strong>, Suh, E.M., & Neuberg, S.L. (March, 2018)
+										<p>06. <strong>Ko, A.</strong>, Suh, E.M., & Neuberg, S.L. (March, 2018)
 											Q: Is happiness predicted by self-perceived mate value? A: Am I a man or a woman?
 											Poster presentation at Society for Personality and Social Psychology conference, Atlanta, GA.</p>
-										<p><strong>Ko, A.</strong>, Kim, E., & Suh, E.M. (January, 2017).
+										<p>05. <strong>Ko, A.</strong>, Kim, E., & Suh, E.M. (January, 2017).
 											Sex differences in self-perceived mate value and happiness.
 											Poster presentation at the Society for Personality and Social Psychology conference, San Antonio, TX.</p>
-										<p>Kim, E., Song, Y., <strong>Ko, A.</strong>, & Suh, E.M. (January, 2017).
+										<p>04. Kim, E., Song, Y., <strong>Ko, A.</strong>, & Suh, E.M. (January, 2017).
 											The relationship between fetal testosterone (digit ratio) and happiness.
 											Poster presentation at the Society for Personality and Social Psychology conference, San Antonio, TX.</p>
-										<p><strong>Ko, A.</strong>, Kim, E., & Suh, E.M. (January, 2016).
+										<p>03. <strong>Ko, A.</strong>, Kim, E., & Suh, E.M. (January, 2016).
 											Women’s hormonal fluctuation and happiness judgment: physical attractiveness matters more during high fertility phase.
 											Poster presentation at Society for Personality and Social Psychology conference, San Diego, CA.</p>
-										<p>Kim, E., <strong>Ko, A.</strong>, & Suh, E.M. (January, 2016).
+										<p>02. Kim, E., <strong>Ko, A.</strong>, & Suh, E.M. (January, 2016).
 											Incremental theory of physical attractiveness and happiness among Koreans.
 											Poster presentation at Society for Personality and Social Psychology conference, San Diego, CA.</p>
-										<p>Shin, J., Suh., E.M., Kim, J., & <strong>Ko, A.</strong> (January, 2016).
+										<p>01. Shin, J., Suh., E.M., Kim, J., & <strong>Ko, A.</strong> (January, 2016).
 											Romantic motives make the relative aspects of happiness salient.
 											Poster presentation at the Society for Personality and Social Psychology conference, San Diego, CA.</p>
 									</div>
