--- a/index.html
+++ b/index.html
@@ -49,13 +49,22 @@
 				<div class="resume-intro py-3">
 					<div class="row align-items-center">
 						<div class="col-12 col-md-3 col-xl-2 text-center">
-						    <img class="resume-profile-image mb-3 mb-md-0 me-md-5  ms-md-0 rounded mx-auto" src="assets/images/Ahra Full 400.jpg" alt="image">
+						    <img class="resume-profile-image mb-3 mb-md-0 me-md-5  ms-md-0 rounded mx-auto"
+								src="assets/images/Ahra Full 400.jpg"
+								alt="image">
 						</div>
 
 						<div class="col text-start">
-							<p class="mb-0"> I am interested in (a) how environments and cultures calibrate our goals and motivational priorities, (b) how our goals and motivational priorities calibrate the way we perceive opportunities and threats afforded by environments and cultures, and (c) how these, in turn, calibrate our social thoughts, feelings, and behaviors. </p>
+							<p class="mb-0"> I am interested in
+								(a) how environments and cultures calibrate our goals and motivational priorities,
+								(b) how our goals and motivational priorities calibrate the way we perceive opportunities and threats afforded by environments and cultures,
+								and (c) how these, in turn, calibrate our social thoughts, feelings, and behaviors. </p>
 							<p> </p>
-							<p> My conceptual framework integrates an understanding of fundamental social motives with an affordance management approach to human psychology, in which people seek to identify and manage the opportunities and threats they encounter. Integrating these approaches provides a nuanced way of understanding a wide range of social phenomena, including the ways in which our motivations and environments interact to shape how we come to understand ourselves and others at cross-cultural, between-individual, and within-individual levels. </p>
+							<p> My conceptual framework integrates an understanding of fundamental social motives with an affordance management approach
+								to human psychology, in which people seek to identify and manage the opportunities and threats they encounter. Integrating
+								these approaches provides a nuanced way of understanding a wide range of social phenomena, including the ways in which our
+								motivations and environments interact to shape how we come to understand ourselves and others at cross-cultural,
+								between-individual, and within-individual levels. </p>
 						</div><!--//col-->
 					</div>
 				</div><!--//resume-intro-->
@@ -228,7 +237,6 @@
 										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
 											2017, 18, 19, 20, 22</div>
 									</div>
-								</div><!--//item-->
 
 									<div class="item mb-2">
 										<div class="item-heading row align-items-center mb-2">
