--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 											Society for Personality and Social Psychology Conference, New Orleans, Louisiana.
 											<br/>Speakers: <strong>Ahra Ko</strong>, Debra Lieberman, Oliver Sng, Jonathan Scultz.</p>
 									</div>
-								</div><!--//item-->
+								</div><!--//Symposium item-->
 
 								<div class="item mb-2">
 									<div class="item-heading row align-items-center mb-2">
@@ -236,7 +236,7 @@
 											<strong>Individual Travel Grant</strong>, ASU Graduate and Professional Student Association</div>
 										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
 											2017, 18, 19, 20, 22</div>
-									</div>
+									</div><!--//Award item-->
 
 									<div class="item mb-2">
 										<div class="item-heading row align-items-center mb-2">
@@ -277,11 +277,11 @@
 												Romantic motives make the relative aspects of happiness salient.
 												Paper presentation at Korea Social and Personality Psychological Association conference, Seoul, South Korea.</p>
 										</div>
-								</div><!--//item-->
+								</div><!--//Presentation item-->
 
 								<div class="item mb-2">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title">Paper Presentation & Talks</h4>
+										<h4 class="item-title">Poster Presentation</h4>
 									</div>
 									<div class="item-content" style="padding-left: 35px; text-indent: -25px;">
 										<p>12. <u>Sabree, K.</u>, <strong>Ko, A.</strong>, Neuberg, S. N., & Kenrick, D. T. (April, 2021)
