--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title">Travel Award</h4>
 									</div>
+									<div class="item-heading row align-items-center mb-2">
 										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
 											<strong>The Graduate College Travel Award</strong>, ASU Graduate College</div>
 										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
@@ -236,7 +237,8 @@
 											<strong>Individual Travel Grant</strong>, ASU Graduate and Professional Student Association</div>
 										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
 											2017, 18, 19, 20, 22</div>
-									</div><!--//Award item-->
+									</div>
+								</div><!--//Award item-->
 
 									<div class="item mb-2">
 										<div class="item-heading row align-items-center mb-2">
