--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 								<li class="mb-2"><i class="fas fa-phone fa-fw fa-lg me-2 "></i><a class="resume-link" href="tel:#">480 410 7425</a></li>
 								<li class="mb-2"><i class="fas fa-envelope fa-fw fa-lg me-2"></i><a class="resume-link" href="mailto:#">ahrako@asu.edu</a></li>
 								<li class="mb-2"><i class="fas fa-globe fa-fw fa-lg me-2"></i><a class="resume-link" href="https://scholar.google.com/citations?user=P9UfPOIAAAAJ&hl=en" target="_blank">Google Scholar</a></li>
-								<li class="mb-0"><i class="fas fa-map-marker-alt fa-fw fa-lg me-2"></i>Tempe, AZ</li>
+								<li class="mb-0"><i class="fas fa-map-marker-alt fa-fw fa-lg me-2"></i>Arizona State University</li>
 							</ul>
 						</div><!--//resume-contact-->
 					</div><!--//row-->
@@ -220,23 +220,23 @@
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title">Travel Award</h4>
 									</div>
-									<div class="item-heading row align-items-center mb-2">
-										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
-											<strong>The Graduate College Travel Award</strong>, ASU Graduate College</div>
-										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
-											2022 Spring, Fall</div>
-										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
-											<strong>Family Care Grant</strong>, The Society for Personality and Social Psychology</div>
-										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
-											2022</div>
-										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
-											<strong>Graduate Travel Award</strong>, The Society for Personality and Social Psychology</div>
-										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
-											2019</div>
-										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
-											<strong>Individual Travel Grant</strong>, ASU Graduate and Professional Student Association</div>
-										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
-											2017, 18, 19, 20, 22</div>
+										<div class="item-heading row align-items-center mb-2">
+											<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
+												<strong>The Graduate College Travel Award</strong>, ASU Graduate College</div>
+											<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
+												2022 Spring, Fall</div>
+											<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
+												<strong>Family Care Grant</strong>, The Society for Personality and Social Psychology</div>
+										  <div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
+										 	 2022</div>
+										  <div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
+											 <strong>Graduate Travel Award</strong>, The Society for Personality and Social Psychology</div>
+										  <div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
+											 2019</div>
+										  <div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
+											 <strong>Individual Travel Grant</strong>, ASU Graduate and Professional Student Association</div>
+										  <div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
+											 2017, 18, 19, 20, 22</div>
 									</div>
 								</div><!--//Award item-->
 
