--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 												[8.50]</p>
 										 	<p>05. Barlev, M., <strong>Ko, A.</strong>, Krems, J. A., & Neuberg, S. L. (2022).
 												<strong>Weight location moderates weight-based self-devaluation and perceived social devaluation in women</strong>.
-												<<i>Social Psychological and Personality Science, 19485506211060724</i>.
+												<i>Social Psychological and Personality Science, 19485506211060724</i>.
 												[5.32] </p>
 										 	<p>04. Krems, J. A., <strong>Ko, A.</strong>, Moon, J. W., & Varnum, M. E. W. (2021).
 												<strong>Sexually unrestricted women are perceived as having low self-esteem: First evidence for a pervasive, robust (but unfounded) stereotype</strong>.
@@ -244,7 +244,7 @@
 										<div class="item-heading row align-items-center mb-2">
 											<h4 class="item-title">Paper Presentation & Talks</h4>
 										</div>
-										<div class="item-content" style="padding-left: 35px; text-indent: -25px;">
+										<div class="item-content" style="padding-left: 25px; text-indent: -25px;">
 											<p>11. <strong>Ko, A.</strong>, Pick, C. M., Varnum, M. E. W., Becker, D. V., & Neuberg, S. L. (June, 2022).
 												Responses to partisans are calibrated by a COVID-sensitive behavioral immune system.
 												Paper presentation at the Human Behavior & Evolution Society Conference, Virtual</p>
@@ -285,7 +285,7 @@
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title">Poster Presentation</h4>
 									</div>
-									<div class="item-content" style="padding-left: 35px; text-indent: -25px;">
+									<div class="item-content" style="padding-left: 25px; text-indent: -25px;">
 										<p>12. <u>Sabree, K.</u>, <strong>Ko, A.</strong>, Neuberg, S. N., & Kenrick, D. T. (April, 2021)
 											Are you my father? Paternal uncertainty and genetic testing.
 											Poster presented at Arizona Psychology Undergraduate Research Conference (AZPURC), Virtual.</p>
