--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title">Travel Award</h4>
 									</div>
-										<div class="item-heading row align-items-center mb-2">
+										<div class="item-heading row align-items-center mb-2" style="padding-left: 10px;">
 											<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
 												<strong>The Graduate College Travel Award</strong>, ASU Graduate College</div>
 											<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
@@ -244,7 +244,7 @@
 										<div class="item-heading row align-items-center mb-2">
 											<h4 class="item-title">Paper Presentation & Talks</h4>
 										</div>
-										<div class="item-content" style="padding-left: 25px; text-indent: -25px;">
+										<div class="item-content" style="padding-left: 35px; text-indent: -25px;">
 											<p>11. <strong>Ko, A.</strong>, Pick, C. M., Varnum, M. E. W., Becker, D. V., & Neuberg, S. L. (June, 2022).
 												Responses to partisans are calibrated by a COVID-sensitive behavioral immune system.
 												Paper presentation at the Human Behavior & Evolution Society Conference, Virtual</p>
@@ -285,7 +285,7 @@
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title">Poster Presentation</h4>
 									</div>
-									<div class="item-content" style="padding-left: 25px; text-indent: -25px;">
+									<div class="item-content" style="padding-left: 35px; text-indent: -25px;">
 										<p>12. <u>Sabree, K.</u>, <strong>Ko, A.</strong>, Neuberg, S. N., & Kenrick, D. T. (April, 2021)
 											Are you my father? Paternal uncertainty and genetic testing.
 											Poster presented at Arizona Psychology Undergraduate Research Conference (AZPURC), Virtual.</p>
