--- a/index.html
+++ b/index.html
@@ -75,22 +75,26 @@
 
 							<section class="education-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">education</h3>
-								<div class="item mb-2">
+
+								<div class="item mb-2" style="padding-left: 10px;">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Ph.D. Social Psychology, Arizona State University</h4>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">Tempe, AZ | 2017 - 2023</div>
+									</div>
 								</div><!--//item-->
 
-								<div class="item mb-2">
+								<div class="item mb-2" style="padding-left: 10px;">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">M.A. Social and Personality Psychology, Yonsei University</h4>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">Seoul, South Korea | 2015 - 2017</div>
+									</div>
 								</div><!--//item-->
 
-								<div class="item mb-2">
+								<div class="item mb-2" style="padding-left: 10px;">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">B.A. Psychology & Cognitive Science, Yonsei University</h4>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">Seoul, South Korea | 2011 - 2015</div>
+									</div>
 								</div><!--//item-->
 							</section><!--//education-section-->
 
