--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
 
 								<div class="item mb-2" style="padding-left: 10px;">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Ph.D. Social Psychology, Arizona State University</h4>
+										<h4 class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
+											<strong>Ph.D. Social Psychology, Arizona State University</strong></h4>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">Tempe, AZ | 2017 - 2023</div>
 									</div>
 								</div><!--//item-->
