--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
-	<meta name="author" content="Xiaoying Riley at 3rd Wave Media">
+	<meta name="author" content="Ahra Ko">
 	<link rel="shortcut icon" href="favicon.ico">
 
 	<!-- Google Fonts -->
@@ -106,7 +106,7 @@
 
 							<section class="award-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-3">Honors & Award</h3>
-								<div class="item mb-2">
+								<div class="item mb-2" style="padding-left: 10px;">
 									<div class="item-heading row align-items-center mb-2">
 										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
 											<strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</div>
@@ -150,7 +150,7 @@
 									<div class="item-heading row align-items-center mb-2">
 										<div class="item-content col-12 col-md-4 col-lg-6 mb-2 mb-md-0"></div>
 										<div class="item-meta col-12 col-md-8 col-lg-6 text-muted text-start text-md-end">[2-year impact factor; Journal Citation Reports 2022]</div>
-										<div class="item-content" style="padding-left: 35px; text-indent: -25px;">
+										<div class="item-content" style="padding-left: 45px; text-indent: -25px;">
 											<p>09. <strong>Ko, A.</strong>, Neuberg, S. L., Pick, C. M., Varnum, M. E. W., & Becker, D. V. (revision under review).
 												<strong>Responses to political partisans are calibrated by a COVID-sensitive disease avoidance psychology</strong>.
 												<i>PNAS (Proceedings of the National Academy of Science)</i>
@@ -196,7 +196,7 @@
 								<h3 class="text-uppercase resume-section-heading mb-3">paper SUBMITTED & IN PREPARATION</h3>
 								<div class="item mb-2">
 									<div class="item-heading row align-items-center mb-2">
-										<div class="item-content" style="padding-left: 35px; text-indent: -25px;">
+										<div class="item-content" style="padding-left: 45px; text-indent: -25px;">
 											<p>04. Kirsch, A., Kenrick, D. T., <strong>Ko, A.</strong> , Pick, C. M., & Varnum, M. E. W. (submitted)
 												<strong>Sibling aggression is surprisingly common and sexually egalitarian</strong>.  </p>
 											<p>03. <strong>Ko, A.</strong>  & Neuberg, S. L. (paper fully drafted)
@@ -212,6 +212,7 @@
 
 							<section class="conference-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-3">Conference</h3>
+
 								<div class="item mb-2">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title">Symposium Organizing</h4>
