--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 								<div class="item mb-2" style="padding-left: 10px;">
 									<div class="item-heading row align-items-center mb-2">
-										<div class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
+										<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
 											<strong>M.A. Social and Personality Psychology, Yonsei University</strong></div>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
 											Seoul, South Korea | 2015 - 2017</div>
@@ -95,7 +95,7 @@
 								</div><!--//item-->
 
 								<div class="item mb-2" style="padding-left: 10px;">
-									<div class="item-heading row align-items-center mb-2">
+									<div class="item-content row align-items-center mb-2">
 										<div class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
 											<strong>B.A. Psychology & Cognitive Science, Yonsei University</strong></div>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
@@ -343,13 +343,13 @@
 							<section class="lab-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-3">Lab</h3>
 								<div class="item">
-									<h4 class="item-title">Evolution, Ecology, & Social Behavior</h4>
+									<h5 class="item-title">Evolution, Ecology, & Social Behavior</h5>
 									<ul class="list-unstyled resume-lab-list">
 										<li class="mb-2">Steven L. Neuberg</li>
 										</ul>
 									</div><!--//item-->
 									<div class="item">
-										<h4 class="item-title">Evolutionary Social Cognition</h4>
+										<h5 class="item-title">Evolutionary Social Cognition</h5>
 										<ul class="list-unstyled resume-lab-list">
 											<li>Douglas T. Kenrick</li>
 											<li>Steven L. Neuberg</li>
@@ -357,13 +357,13 @@
 											</ul>
 										</div><!--//item-->
 										<div class="item">
-											<h4 class="item-title">Culture & Ecology</h4>
+											<h5 class="item-title">Culture & Ecology</h5>
 											<ul class="list-unstyled resume-lab-list">
 												<li class="mb-2">Michael E. W. Varnum</li>
 												</ul>
 											</div><!--//item-->
 										<div class="item">
-											<h4 class="item-title">Happiness & Culture</h4>
+											<h5 class="item-title">Happiness & Culture</h5>
 											<ul class="list-unstyled resume-lab-list">
 												<li class="mb-2">Eunkook M. Suh</li>
 												</ul>
