--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 
 							<section class="award-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-3">Honors & Award</h3>
-								<div class="item mb-2" style="padding-left: 10px;">
-									<div class="item-heading row align-items-center mb-2">
+								<div class="item mb-2">
+									<div class="item-heading row align-items-center mb-2" style="padding-left: 10px;">
 										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
 											<strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</div>
 										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
