--- a/index.html
+++ b/index.html
@@ -214,10 +214,10 @@
 								<h3 class="text-uppercase resume-section-heading mb-3">Conference</h3>
 
 								<div class="item mb-2">
-									<div class="item-heading row align-items-center mb-2">
+									<div class="item-heading row align-items-center mb-2" >
 										<h4 class="item-title">Symposium Organizing</h4>
 									</div>
-									<div class="item-content">
+									<div class="item-content" style="padding-left: 10px;">
 										<p><strong>Chair, COVID, Disease Psychology, and Politics</strong> (June, 2022).
 											Human Behavior & Evolution Society Conference, Virtual.
 											<br/>Speakers: <strong>Ahra Ko</strong>, Michael Bang Peterson, Lene Aarøe, Lei Fan.</p>
@@ -249,54 +249,54 @@
 										  <div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
 											 2017, 18, 19, 20, 22</div>
 									</div>
-								</div><!--//Award item-->
-
-									<div class="item mb-2">
-										<div class="item-heading row align-items-center mb-2">
-											<h4 class="item-title">Paper Presentation & Talks</h4>
-										</div>
-										<div class="item-content" style="padding-left: 35px; text-indent: -25px;">
-											<p>11. <strong>Ko, A.</strong>, Pick, C. M., Varnum, M. E. W., Becker, D. V., & Neuberg, S. L. (June, 2022).
-												Responses to partisans are calibrated by a COVID-sensitive behavioral immune system.
-												Paper presentation at the Human Behavior & Evolution Society Conference, Virtual</p>
-											<p>10. Kirsch, A., Kenrick, D. T., <strong>Ko, A.</strong>, Pick, C. M., & Varnum, M. E. W. (June, 2022)
-												Differences in aggression among kin and non-kin.
-												Paper presentation at the Human Behavior & Evolution Society Conference, Virtual.</p>
-											<p>09. Cohen, A. B., Moon, J. W., & <strong>Ko, A.</strong> (May, 2022).
-												Individual differences and ecological influences interact to predict anti-atheist prejudice. P
-												aper presentation at APS Annual Conference, Chicago, Illinois. </p>
-											<p>08. Kirsch, A., Kenrick, D. T., <strong>Ko, A.</strong>, Pick, C. M., & Varnum, M. E. W. (April, 2022)
-												Differences in aggression among kin and non-kin.
-												Paper presentation at the Northeastern Evolutionary Psychology Society.</p>
-											<p>07. <strong>Ko, A.</strong>, Pick, C. M., Varnum, M. E. W., Becker, D. V., & Neuberg, S. L. (February, 2022).
-												Threat-based antipathy toward Republicans is calibrated within individuals by a disease psychology sensitive to COVID cases.
-												Data presentation at the Society for Personality and Social Psychology conference, San Francisco, California.</p>
-											<p>06. Bock, J., <strong>Ko, A.</strong>, & Krems, J. A. (February, 2021).
-												Explicit and implicit evaluations of mask-wearers during the COVID-19 pandemic.
-												Paper presentation at the Society for Personality and Social Psychology conference.</p>
-											<p>05. <strong>Ko, A.</strong>, Pick, C. M., Kwon, J., Barlev, M., Krems, J. A., Varnum, M. E. W., & Kenrick, D. T. (February, 2020).
-												Family matters: Rethinking the psychology of human social motivation.
-												Paper presentation at the Society for Personality and Social Psychology conference, New Orleans, Louisiana.</p>
-											<p>04. Krems, J. A., <strong>Ko, A.</strong>, Moon, J. W., & Varnum, M. E. W. (October, 2019).
-												Sexually unrestricted women are perceived as having low self-esteem: First evidence for a pervasive persistent, robust (but unfounded) stereotype.
-												Paper presentation at the annual meeting of the Society for Experimental Social Psychology, Toronto, Canada. </p>
-											<p>03. <strong>Ko, A.</strong>, Suh, E. M., Shin, J., & Neuberg, S. L. (May, 2019).
-												Functionally calibrating life satisfaction: The case of mating motives and self-perceived mate value.
-												Paper presentation at the Human Behavior and Evolution Society, Boston, Massachusetts.</p>
-											<p>02. <strong>Ko, A.</strong>, & Suh, E. M. (August, 2016).
-												Self-perceived mate value and happiness.
-												Paper presentation at the International Society for Quality of Life Research conference, Seoul, South Korea.</p>
-											<p>01. Shin, J., Suh., E. M., Kim, J., & <strong>Ko, A.</strong> (May, 2015).
-												Romantic motives make the relative aspects of happiness salient.
-												Paper presentation at Korea Social and Personality Psychological Association conference, Seoul, South Korea.</p>
-										</div>
-								</div><!--//Presentation item-->
+								</div>
 
 								<div class="item mb-2">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title">Poster Presentation</h4>
+										<h4 class="item-title">Paper Presentation & Talks</h4>
 									</div>
 									<div class="item-content" style="padding-left: 35px; text-indent: -25px;">
+										<p>11. <strong>Ko, A.</strong>, Pick, C. M., Varnum, M. E. W., Becker, D. V., & Neuberg, S. L. (June, 2022).
+											Responses to partisans are calibrated by a COVID-sensitive behavioral immune system.
+											Paper presentation at the Human Behavior & Evolution Society Conference, Virtual</p>
+										<p>10. Kirsch, A., Kenrick, D. T., <strong>Ko, A.</strong>, Pick, C. M., & Varnum, M. E. W. (June, 2022)
+											Differences in aggression among kin and non-kin.
+											Paper presentation at the Human Behavior & Evolution Society Conference, Virtual.</p>
+										<p>09. Cohen, A. B., Moon, J. W., & <strong>Ko, A.</strong> (May, 2022).
+											Individual differences and ecological influences interact to predict anti-atheist prejudice. P
+											aper presentation at APS Annual Conference, Chicago, Illinois. </p>
+										<p>08. Kirsch, A., Kenrick, D. T., <strong>Ko, A.</strong>, Pick, C. M., & Varnum, M. E. W. (April, 2022)
+											Differences in aggression among kin and non-kin.
+											Paper presentation at the Northeastern Evolutionary Psychology Society.</p>
+										<p>07. <strong>Ko, A.</strong>, Pick, C. M., Varnum, M. E. W., Becker, D. V., & Neuberg, S. L. (February, 2022).
+										Threat-based antipathy toward Republicans is calibrated within individuals by a disease psychology sensitive to COVID cases.
+										Data presentation at the Society for Personality and Social Psychology conference, San Francisco, California.</p>
+										<p>06. Bock, J., <strong>Ko, A.</strong>, & Krems, J. A. (February, 2021).
+											Explicit and implicit evaluations of mask-wearers during the COVID-19 pandemic.
+											Paper presentation at the Society for Personality and Social Psychology conference.</p>
+										<p>05. <strong>Ko, A.</strong>, Pick, C. M., Kwon, J., Barlev, M., Krems, J. A., Varnum, M. E. W., & Kenrick, D. T. (February, 2020).
+											Family matters: Rethinking the psychology of human social motivation.
+											Paper presentation at the Society for Personality and Social Psychology conference, New Orleans, Louisiana.</p>
+										<p>04. Krems, J. A., <strong>Ko, A.</strong>, Moon, J. W., & Varnum, M. E. W. (October, 2019).
+											Sexually unrestricted women are perceived as having low self-esteem: First evidence for a pervasive persistent, robust (but unfounded) stereotype.
+											Paper presentation at the annual meeting of the Society for Experimental Social Psychology, Toronto, Canada. </p>
+										<p>03. <strong>Ko, A.</strong>, Suh, E. M., Shin, J., & Neuberg, S. L. (May, 2019).
+											Functionally calibrating life satisfaction: The case of mating motives and self-perceived mate value.
+											Paper presentation at the Human Behavior and Evolution Society, Boston, Massachusetts.</p>
+										<p>02. <strong>Ko, A.</strong>, & Suh, E. M. (August, 2016).
+											Self-perceived mate value and happiness.
+											Paper presentation at the International Society for Quality of Life Research conference, Seoul, South Korea.</p>
+										<p>01. Shin, J., Suh., E. M., Kim, J., & <strong>Ko, A.</strong> (May, 2015).
+											Romantic motives make the relative aspects of happiness salient.
+											Paper presentation at Korea Social and Personality Psychological Association conference, Seoul, South Korea.</p>
+										</div>
+									</div><!--//Presentation item-->
+
+									<div class="item mb-2">
+										<div class="item-heading row align-items-center mb-2">
+											<h4 class="item-title">Poster Presentation</h4>
+										</div>
+										<div class="item-content" style="padding-left: 35px; text-indent: -25px;">
 										<p>12. <u>Sabree, K.</u>, <strong>Ko, A.</strong>, Neuberg, S. N., & Kenrick, D. T. (April, 2021)
 											Are you my father? Paternal uncertainty and genetic testing.
 											Poster presented at Arizona Psychology Undergraduate Research Conference (AZPURC), Virtual.</p>
@@ -334,7 +334,7 @@
 											Romantic motives make the relative aspects of happiness salient.
 											Poster presentation at the Society for Personality and Social Psychology conference, San Diego, CA.</p>
 									</div>
-							</div><!--//item-->
+								</div><!--//item-->
 
 							</section><!--//conference-section-->
 
