--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 								</div><!--//item-->
 
 								<div class="item mb-2" style="padding-left: 10px;">
-									<div class="item-content row align-items-center mb-2">
-										<div class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
+									<div class="item-heading row align-items-center mb-2">
+										<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
 											<strong>B.A. Psychology & Cognitive Science, Yonsei University</strong></div>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
 											Seoul, South Korea | 2011 - 2015</div>
