--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 										  <div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
 											 <strong>Individual Travel Grant</strong>, ASU Graduate and Professional Student Association</div>
 										  <div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
-											 2017, 18, 19, 20, 22</div>
+											 2017, 18, 19, 20, 22</div><p></p>
 									</div>
 								</div>
 
@@ -343,13 +343,15 @@
 							<section class="lab-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-3">Lab</h3>
 								<div class="item">
-									<h6 class="item-title">Evolution, Ecology, & Social Behavior</h6>
+									<div class="item-content">
+										<strong>Evolution, Ecology, & Social Behavior</strong></div>
 									<ul class="list-unstyled resume-lab-list">
 										<li class="mb-2">Steven L. Neuberg</li>
 										</ul>
 									</div><!--//item-->
 									<div class="item">
-										<h6 class="item-title">Evolutionary Social Cognition</h6>
+										<div class="item-content">
+											<strong>Evolutionary Social Cognition</strong></div>
 										<ul class="list-unstyled resume-lab-list">
 											<li>Douglas T. Kenrick</li>
 											<li>Steven L. Neuberg</li>
@@ -357,13 +359,15 @@
 											</ul>
 										</div><!--//item-->
 										<div class="item">
-											<h6 class="item-title">Culture & Ecology</h6>
+											<div class="item-content">
+												<strong>Culture & Ecology</strong></div>
 											<ul class="list-unstyled resume-lab-list">
 												<li class="mb-2">Michael E. W. Varnum</li>
 												</ul>
 											</div><!--//item-->
 										<div class="item">
-											<h6 class="item-title">Happiness & Culture</h6>
+											<div class="item-content">
+												<strong>Happiness & Culture</strong></div>
 											<ul class="list-unstyled resume-lab-list">
 												<li class="mb-2">Eunkook M. Suh</li>
 												</ul>
