--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 						</div><!--//resume-title-->
 						<div class="resume-contact col-12 col-md-6 col-lg-4 col-xl-3">
 							<ul class="list-unstyled mb-0">
-								<li class="mb-2"><i class="fas fa-phone fa-fw fa-lg me-2 "></i><a class="resume-link" href="tel:#">480 410 7425</a></li>
-								<li class="mb-2"><i class="fas fa-envelope fa-fw fa-lg me-2"></i><a class="resume-link" href="mailto:#">ahrako@asu.edu</a></li>
+								<li class="mb-2"><i class="fas fa-orcid fa-fw fa-lg me-2 "></i><a class="resume-link" href="tel:#">480 410 7425</a></li>
+								<li class="mb-2"><i class="fas fa-envelope fa-fw fa-lg me-2"></i>ahrako@asu.edu</a></li>
 								<li class="mb-2"><i class="fas fa-globe fa-fw fa-lg me-2"></i><a class="resume-link" href="https://scholar.google.com/citations?user=P9UfPOIAAAAJ&hl=en" target="_blank">Google Scholar</a></li>
 								<li class="mb-0"><i class="fas fa-map-marker-alt fa-fw fa-lg me-2"></i>Arizona State University</li>
 							</ul>
@@ -253,7 +253,7 @@
 
 								<div class="item mb-2">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title">Paper Presentation & Talks</h4>
+										<h4 class="item-title">Paper Presentation & Talk</h4>
 									</div>
 									<div class="item-content" style="padding-left: 35px; text-indent: -25px;">
 										<p>11. <strong>Ko, A.</strong>, Pick, C. M., Varnum, M. E. W., Becker, D. V., & Neuberg, S. L. (June, 2022).
