--- a/index.html
+++ b/index.html
@@ -36,10 +36,17 @@
 						</div><!--//resume-title-->
 						<div class="resume-contact col-12 col-md-6 col-lg-4 col-xl-3">
 							<ul class="list-unstyled mb-0">
-								<li class="mb-2"><i class="fas fa-id fa-fw fa-lg me-2 "></i><a class="resume-link" href="tel:#">480 410 7425</a></li>
-								<li class="mb-2"><i class="fas fa-envelope fa-fw fa-lg me-2"></i>ahrako@asu.edu</a></li>
-								<li class="mb-2"><i class="fas fa-globe fa-fw fa-lg me-2"></i><a class="resume-link" href="https://scholar.google.com/citations?user=P9UfPOIAAAAJ&hl=en" target="_blank">Google Scholar</a></li>
-								<li class="mb-0"><i class="fas fa-map-marker-alt fa-fw fa-lg me-2"></i>Arizona State University</li>
+								<li class="mb-2"><i class="fas fa-envelope fa-fw fa-lg me-2"></i>
+									ahrako@asu.edu</a></li>
+								<li class="mb-2"><i class="fas fa-brand fa-orcid fa-fw fa-lg me-2 "></i>
+									<a class="resume-link" href="https://orcid.org/0000-0002-7295-1097" target ="_blank">
+										0000-0002-7295-1097</a></li>
+								<li class="mb-2"><i class="fas fa-globe fa-fw fa-lg me-2"></i>
+									<a class="resume-link" href="https://scholar.google.com/citations?user=P9UfPOIAAAAJ&hl=en" target="_blank">
+										Google Scholar</a></li>
+								<li class="mb-0"><i class="fa-solid fa-graduation-cap fa-fw fa-lg me-2"></i>
+									<a class="resume-link" href="https://search.asu.edu/profile/3104472" target="_blank">
+										Arizona State University</li>
 							</ul>
 						</div><!--//resume-contact-->
 					</div><!--//row-->
